fixed fonts and scrollbar

--- a/style.css
+++ b/style.css
@@ -640,14 +640,14 @@ a:hover, a:active {
     font-weight: 400;
     margin-top: 55%;
     padding-bottom: 10%;
-    font-family: cursive;
+    font-family: palatino;
     color: #fff;
 }
 
 .hero-content-main h1 {
     font-size: 3.5rem;
     font-weight: 400;
-    font-family: cursive;
+    font-family: palatino;
     color: #fff;
 }
 
